2006-07-12  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-custom-error.tcc
	(format_error): Add a third context argument, for use with keyfile
	errors.

2006-07-12  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-custom-error.tcc
	(format_error): Never pass more arguments than the format string
	specifies.

2006-07-12  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot-config.cc
	(load_data): Use new error contructor.

	* sbuild/sbuild-session.cc
	(wait_for_child): Use new error contructor.

	* sbuild/sbuild-custom-error.tcc
	(format_error): Replace all overloaded functions with two
	variants, one for an error_type enum, one for an exception (for
	rethrowing an exception of a different type).

	* sbuild/sbuild-custom-error.h: Add new custom_error<>::null
	class, used to represent an absent context or detail item in an
	error.  Add two new constructors for rethrowing exceptions.

2006-07-12  Roger Leigh  <rleigh@debian.org>

	* All sources use strerror(errno) in place of errno when creating
	a custom_error<>.

	* sbuild/sbuild-custom-error.h: Remove all constructors with
	integer errno arguments.

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* debian/rules: Build in debian/build using VPATH.

	* debian/changelog: Add VPATH build.

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* All Makefile.ams: include global.mk.

	* scripts/global.mk: New file.  Global Makefile options.

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* Don't include <syslog.h> in sources not using syslog.

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-main-base.cc (run_impl): Remove code duplicated
	in schroot_base::main::run (termios saving and restoring, and
	exception handling).

2006-07-10  Roger Leigh  <rleigh@debian.org>

	* debian/schroot.docs: Add the contents of debian/docs.

	* debian/docs: Remove.

	* debian/rules: The /usr/share/doc directories for dchroot and
	dchroot-dsa are symlinks to schroot.

	* debian/dchroot.preinst: New file.  Remove