@@ -78,8 +78,8 @@ namespace
 }
 
 template<>
-custom_error<sbuild::chroot::error_code>::map_type
-custom_error<sbuild::chroot::error_code>::error_strings
+custom_error_base<sbuild::chroot::error_code>::map_type
+custom_error_base<sbuild::chroot::error_code>::error_strings
 (init_errors,
  init_errors + (sizeof(init_errors) / sizeof(init_errors[0])));
 
