@@ -83,8 +83,8 @@ namespace
 }
 
 template<>
-std::map<sbuild::personality::error_code,const char *>
-custom_error<sbuild::personality::error_code>::error_strings
+custom_error_base<sbuild::personality::error_code>::map_type
+custom_error_base<sbuild::personality::error_code>::error_strings
 (init_errors,
  init_errors + (sizeof(init_errors) / sizeof(init_errors[0])));
 
