@@ -184,8 +184,8 @@ namespace
 }
 
 template<>
-std::map<session::error_code,const char *>
-custom_error<session::error_code>::error_strings
+custom_error_base<session::error_code>::map_type
+custom_error_base<session::error_code>::error_strings
 (init_errors,
  init_errors + (sizeof(init_errors) / sizeof(init_errors[0])));
 
